Sat Feb 26 14:08:27 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/alternative_character_sets.h:
	* src/tds/character_sets.h src/tds/encodings.h:
	* src/tds/iconv.c src/tds/sybase_character_sets.h:
	- support for CP437 charset

Tue Feb 22 17:03:21 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/bsqldb.c src/ctlib/ct.c src/odbc/unittests/compute.c:
	* src/replacements/readpassphrase.c src/tds/net.c:
	- remove some warning

Mon Feb 21 15:43:17 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/login.c: do not do pre-login if SSL not enabled

Sun Feb 20 10:18:47 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* misc/test-other.sh: improved
	* src/odbc/unittests/print.c: some fixes
	* src/tds/query.c: fix core in emulated prepared, handle NULLs
	* src/tds/token.c: fix buffer overflow using text
	* src/tds/unittests/dataread.c:
	- improved to catch problems reallocating BLOBs

Fri Feb 18 13:55:26 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* TODO: updated
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/unittests/typeinfo.c:
	- fix problem using SQLGetTypeInfo in Sybase and ODBC 3.x
	- do not prepare too much on Sybase
	- update for NODM environment
	* src/ctlib/blk.c: add comment
	* src/ctlib/unittests/cancel.c: decrease timeout, too high

Thu Feb 17 22:27:45 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/timeout.c:
	- fix timeout in ODBC

Wed Feb 16 20:22:37 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/util.c:
	- fix reentrancy problem using logs and append mode
	- make tdsdump_append static
	* src/ctlib/ct.c:
	- fix use of freed memory

Tue Feb 15 14:03:00 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/net.c TODO:
	- improve support for getting port on mssql2k (mainly using clusters)

Tue Feb 15 10:07:12 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* TODO: updated