@@ -1,3 +1,7 @@
+Sun Feb 27 09:47:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* src/tds/iconv.c:
+	- make sure we don't core if server charset is not supported
+
 Sat Feb 26 14:08:27 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* src/tds/alternative_character_sets.h:
 	* src/tds/character_sets.h src/tds/encodings.h:
